; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/ralink/rt2x00/extr_rt73usb.c_rt73usb_stop_queue.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/ralink/rt2x00/extr_rt73usb.c_rt73usb_stop_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.data_queue = type { i32, %struct.rt2x00_dev* }
%struct.rt2x00_dev = type { i32 }

@TXRX_CSR0 = common dso_local global i32 0, align 4
@TXRX_CSR0_DISABLE_RX = common dso_local global i32 0, align 4
@TXRX_CSR9 = common dso_local global i32 0, align 4
@TXRX_CSR9_TSF_TICKING = common dso_local global i32 0, align 4
@TXRX_CSR9_TBTT_ENABLE = common dso_local global i32 0, align 4
@TXRX_CSR9_BEACON_GEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.data_queue*)* @rt73usb_stop_queue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rt73usb_stop_queue(%struct.data_queue* %0) #0 {
  %2 = alloca %struct.data_queue*, align 8
  %3 = alloca %struct.rt2x00_dev*, align 8
  %4 = alloca i32, align 4
  store %struct.data_queue* %0, %struct.data_queue** %2, align 8
  %5 = load %struct.data_queue*, %struct.data_queue** %2, align 8
  %6 = getelementptr inbounds %struct.data_queue, %struct.data_queue* %5, i32 0, i32 1
  %7 = load %struct.rt2x00_dev*, %struct.rt2x00_dev** %6, align 8
  store %struct.rt2x00_dev* %7, %struct.rt2x00_dev** %3, align 8
  %8 = load %struct.data_queue*, %struct.data_queue** %2, align 8
  %9 = getelementptr inbounds %struct.data_queue, %struct.data_queue* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  switch i32 %10, label %35 [
    i32 128, label %11
    i32 129, label %21
  ]

11:                                               ; preds = %1
  %12 = load %struct.rt2x00_dev*, %struct.rt2x00_dev** %3, align 8
  %13 = load i32, i32* @TXRX_CSR0, align 4
  %14 = call i32 @rt2x00usb_register_read(%struct.rt2x00_dev* %12, i32 %13)
  store i32 %14, i32* %4, align 4
  %15 = load i32, i32* @TXRX_CSR0_DISABLE_RX, align 4
  %16 = call i32 @rt2x00_set_field32(i32* %4, i32 %15, i32 1)
  %17 = load %struct.rt2x00_dev*, %struct.rt2x00_dev** %3, align 8
  %18 = load i32, i32* @TXRX_CSR0, align 4
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @rt2x00usb_register_write(%struct.rt2x00_dev* %17, i32 %18, i32 %19)
  br label %36

21:                                               ; preds = %1
  %22 = load %struct.rt2x00_dev*, %struct.rt2x00_dev** %3, align 8
  %23 = load i32, i32* @TXRX_CSR9, align 4
  %24 = call i32 @rt2x00usb_register_read(%struct.rt2x00_dev* %22, i32 %23)
  store i32 %24, i32* %4, align 4
  %25 = load i32, i32* @TXRX_CSR9_TSF_TICKING, align 4
  %26 = call i32 @rt2x00_set_field32(i32* %4, i32 %25, i32 0)
  %27 = load i32, i32* @TXRX_CSR9_TBTT_ENABLE, align 4
  %28 = call i32 @rt2x00_set_field32(i32* %4, i32 %27, i32 0)
  %29 = load i32, i32* @TXRX_CSR9_BEACON_GEN, align 4
  %30 = call i32 @rt2x00_set_field32(i32* %4, i32 %29, i32 0)
  %31 = load %struct.rt2x00_dev*, %struct.rt2x00_dev** %3, align 8
  %32 = load i32, i32* @TXRX_CSR9, align 4
  %33 = load i32, i32* %4, align 4
  %34 = call i32 @rt2x00usb_register_write(%struct.rt2x00_dev* %31, i32 %32, i32 %33)
  br label %36

35:                                               ; preds = %1
  br label %36

36:                                               ; preds = %35, %21, %11
  ret void
}

declare dso_local i32 @rt2x00usb_register_read(%struct.rt2x00_dev*, i32) #1

declare dso_local i32 @rt2x00_set_field32(i32*, i32, i32) #1

declare dso_local i32 @rt2x00usb_register_write(%struct.rt2x00_dev*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
